--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <title>React App</title>
     <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://use.fontawesome.com/6d61ac6cc2.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
