--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
     -->
     <title>React App</title>
     <script src="https://js.stripe.com/v3/"></script>
-    <script src="https://use.fontawesome.com/6d61ac6cc2.js"></script>
+    <!-- <script src="https://use.fontawesome.com/6d61ac6cc2.js"></script> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
